# schematicGenerator

./: .gitignore  CMakeLists.txt  LICENSE.md  Makefile  README.md  schema
docs/: addingSymbols.rst  compilation.rst  conf.py  cppapi.rst  customize.rst  index.rst  jsapi.rst  started.rst
include/: box.h  common.h  coreDesign.h  exportStructure.h  hashlib.h  module.h  moduleImpl.h  modules.h  net.h  nets.h  partition.h  placement.h  routing.h  schematic.h  schematicGenerator.h  terminal.h  terminalImpl.h
include/json/: json.hpp
src/: modules.cpp  placement.cpp  terminal.cpp
src/core/: box.cpp  coreDesign.cpp  debugFunctions.cpp  helperFunctions.cpp  module.cpp  moduleImpl.cpp  net.cpp  nets.cpp  partition.cpp  placement.cpp  routing.cpp  schematic.cpp  schematicGenerator.cpp  terminal.cpp  terminalImpl.cpp
src/css/: schematik.css
src/javascript/: exportStructure.cpp  schematic.js
src/jsonFrontEnd/: json.cpp
src/yosys/: yosys_pnr_plugin.cpp
tests/: stamp.jsp  test.json  test1.cpp  test2.html  test2.js  test3.cpp  test4.cpp
